test/compile-fail/import-depend-on-entry.as
import fixture from "./fixtures/depend-on-entry";

let mutable counter;
export def method() {
  counter = 1;
}
