test/compile-fail/import-depend-on-entry.stderr
[0;37m/home/ryan/Workspace/arrow/test/compile-fail/fixtures/depend-on-entry.as:1.1-40: [0;31merror: [1;37mno module found for "../depend-on-entry"[0m
